--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
-{% extends "layout.html" %}
+<!DOCTYPE html>
 
-{% block title %}
-    Home
-{% endblock %}
-
-{% block main %}
+<html lang="en">
+    <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <link href="styles.css" rel="stylesheet">
+        <title>vandana: {% block title %}{% endblock %}</title>
+    </head>
+    <body>
+        <!-- Sidebar -->
+        <div class="sidebar">
+          <!-- Title -->
+          <h1 class="display-6">vandana</h1>
+          <!-- Navigation -->
+          <ul class="menu">
+            <li>
+              <a href="index.html">Home</a>
+            </li>
+            <li>
+              <a href="about.html">About</a>
+            </li>
+            <li>
+              <a href="more.html">More</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
         <!-- Photo carousel -->
         <div class="container">
           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -32,4 +55,5 @@
             </button>
           </div>
         </div>
-{% endblock %}
+    </body>
+</html>
