--- a/index.html
+++ b/index.html
@@ -11,20 +11,17 @@
         <!-- Sidebar -->
         <div class="sidebar">
           <!-- Title -->
-          <h1 class="display-6">vandana</h1>
+          <h1 class="display-6">vandana seshadri</h1>
           <!-- Navigation -->
           <ul class="menu">
             <li>
-              <a href="index.html">Home</a>
+              <a href="index.html">Work</a>
             </li>
             <li>
               <a href="about.html">About</a>
             </li>
             <li>
               <a href="more.html">More</a>
-            </li>
-            <li>
-                <a href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
