--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <!-- Navigation -->
           <ul class="menu">
             <li>
-              <a href="index.html">Work</a>
+              <a href="/">Work</a>
             </li>
             <li>
               <a href="about.html">About</a>
