--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link href="styles.css" rel="stylesheet">
-        <title>vandana seshadri</title>
+        <title>vandana</title>
     </head>
     <body>
         <!-- Sidebar -->
@@ -15,42 +15,36 @@
           <!-- Navigation -->
           <ul class="menu">
             <li>
-              <a href="/">Work</a>
+              <a href="index.html">Work</a>
             </li>
             <li>
               <a href="about.html">About</a>
             </li>
             <li>
-              <a href="more.html">More</a>
+              <a href="test.html">Test</a>
             </li>
           </ul>
         </div>
-        <!-- Photo carousel -->
-        <div class="container">
-          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="p1.JPG" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="p4.jpg" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img id="different" src="p6.JPG" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="p3.jpg" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-        </div>
+        <!-- Grid -->
+          <ul class="image-gallery">
+            <li>
+              <img src="IMG_6328.JPG">
+            </li>
+            <li>
+              <img src="IMG_2095.JPG">
+            </li>
+            <li>
+              <img src="IMG_1459.jpg">
+            </li>
+            <li>
+              <img src="ig_8.JPG">
+            </li>
+            <li>
+              <img src="IMG_1544.JPG">
+            </li>
+            <li>
+              <img src="teeth_1.png">
+            </li>
+          </ul>
     </body>
 </html>
