--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
           <!-- Navigation -->
           <ul class="menu">
             <li>
-              <a href="index.html">Work</a>
+              <a href="/">Artwork</a>
+            </li>
+            <li>
+              <a href="/">Projects</a>
             </li>
             <li>
               <a href="about.html">About</a>
-            </li>
-            <li>
-              <a href="test.html">Test</a>
             </li>
           </ul>
         </div>
