--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+t<!DOCTYPE html>
 
 <html lang="en">
     <head>
@@ -18,7 +18,7 @@
               <a href="/">Artwork</a>
             </li>
             <li>
-              <a href="/">Projects</a>
+              <a href="projects.html">Projects</a>
             </li>
             <li>
               <a href="about.html">About</a>
