--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link href="styles.css" rel="stylesheet">
-        <title>vandana</title>
+        <title>vandana seshadri</title>
     </head>
     <body>
         <!-- Sidebar -->
@@ -16,13 +16,13 @@
           <!-- Navigation -->
           <ul class="menu">
             <li>
-              <a href="index.html">Work</a>
+              <a href="/">Artork</a>
+            </li>
+            <li>
+              <a href="projects.html">Projects</a>
             </li>
             <li>
               <a href="about.html">About</a>
-            </li>
-            <li>
-              <a href="test.html">Test</a>
             </li>
           </ul>
         </div>
