--- a/about.html
+++ b/about.html
@@ -11,14 +11,14 @@
         <!-- Sidebar -->
         <div class="sidebar">
           <!-- Title -->
-          <h1 class="display-6">vandana seshadri</h1>
+          <h1 class="display-6"><a id="logo" href="/">vandana seshadri</a></h1>
           <!-- Navigation -->
           <ul class="menu">
             <li>
               <a href="/">Artwork</a>
             </li>
             <li>
-              <a href="/">Projects</a>
+              <a href="projects.html">Projects</a>
             </li>
             <li>
               <a href="about.html">About</a>
