--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
           <!-- Navigation -->
           <ul class="menu">
             <li>
-              <a href="/">Artork</a>
+              <a href="/">Artwork</a>
             </li>
             <li>
               <a href="projects.html">Projects</a>
