--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link href="styles.css" rel="stylesheet">
-        <title>vandana seshadri | about</title>
+        <title>vandana | about</title>
     </head>
     <body>
         <!-- Sidebar -->
@@ -25,23 +25,24 @@
             </li>
           </ul>
         </div>
+          <!-- p: 1 unique tag -->
         <div class="bio">
-          <p id="hello">hello!</p>
-          <div class="abt">
-            <p>
-              My name is Vandana (she/her), and I'm a visual artist and analyst based in Dallas, TX.
+          <p id="hello" class="abt">hello!</p>
+          <div>
+            <p class="abt">
+              My name is Vandana (she/her), and I'm a creative person based in Dallas, TX.
               I have a B.S. in Chemical Engineering from the University of Texas at Austin.
             </p>
-            <p>
-              I've been doing <a href="/">traditional analog artwork</a>, like pencil drawing and oil/watercolor painting ever since I was little,
-              and I continued my passion for artwork in college through <a href=/">
-              Texas Visual Arts Collective</a>, a student organization I co-founded and directed. I specialize in small-scale analog artwork, 
-              primarily working in watercolor, graphite, and pen/ink.
+            <p class="abt">
+              I've been doing <a href="index.html">traditional analog artwork</a>, like pencil drawing and oil/watercolor painting ever since I was little,
+              and I continued my passion for artwork in college through <a href=
+              "https://thedailytexan.com/2021/05/02/ut-austin-student-art-organization-seeks-to-raise-awareness-for-social-justice-issues/">
+              Texas Visual Arts Collective</a>, a student organization I co-founded and directed. After graduating, I've kept a regular creative practice; you can
+              follow along <a href="#">here</a>!
             </p>
-            <p>
-              Using a design thinking framework, I think about how to create products and experiences to solve problems. I’ve developed creative solutions 
-              for university students and gathered user research in my current role as an analyst at <a href="https://iqvia.com">IQVIA</a>. 
-              Outside of my career, I like to knit, write, indulge in internet/pop culture, and spend lots of time in the Texas sun. 
+            <p class="abt">
+              I'm currently working at <a href="https://iqvia.com">IQVIA</a> as a data analyst. I'm also an aspiring user researcher/product designer in the tech space.
+              Outside of work and art, I like to swim, go on walks, play tennis, and indulge in pop culture.
             </p>
         </div>
         </div>
