--- a/projects.html
+++ b/projects.html
@@ -5,13 +5,13 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link href="styles.css" rel="stylesheet">
-        <title>vandana seshadri | projects</title>
+        <title>vandana</title>
     </head>
     <body>
         <!-- Sidebar -->
         <div class="sidebar">
           <!-- Title -->
-          <h1 class="display-6"><a id="logo" href="/">vandana seshadri</a></h1>
+          <h1 class="display-6"><a id="logo" href="/">vandana seshadri | projects</a></h1>
           <!-- <h1 id="logo" class="display-6">vandana seshadri</h1> -->
           <!-- Navigation -->
           <ul class="menu">
@@ -27,23 +27,10 @@
           </ul>
         </div>
         <!-- Carousel -->
-        <div class="tvac">
-            <h1 class="project-heading">Texas Visual Arts Collective</h1>
-            <!-- <div id="carouselExampleControls" class="carousel slide" data-bs-interval="false"> -->
-            <!-- <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel"> -->
-              <!-- <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="yeah-10.JPEG" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="000009790011.JPEG" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <video controls>
-                        <source src="TVAC_Video.mp4" type="video/mp4">
-                    </video>
-                </div>
-              </div> -->
+        <div class="projects">
+          <!-- <h1 id="header">Texas Visual Arts Collective</h1> -->
+          <h1>Texas Visual Arts Collective</h1>
+          <!-- <small>(2020-2022)</small> -->
               <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-interval="false">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
@@ -56,8 +43,7 @@
                     <video class="d-block w-100" controls>
                         <source src="TVAC_Video.mp4" type="video/mp4">
                     </video>
-                </div>
-                </div>
+                  </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
@@ -67,16 +53,40 @@
                   <span class="visually-hidden">Next</span>
                 </button>
               </div>
+            </div>
             <p class="tvac-desc">
                 Texas Visual Arts Collective is a creative and philanthropic student organization I co-created at UT Austin.
-                The organization was born out of 1&#41; the need for a creative community catering to analog art forms and
+                The organization was inspired by 1&#41; the need for a creative community catering to analog art forms and
                 non-fine arts majors, and 2&#41; the active spirit surrounding social issues on and off campus.
                 While I was co-director, we:
-            <ul>
-                <li>Hosted two art shows selling prints and original artworks to benefit local philanthropies</li>
-                <li>Started a creative resale supply initiative, providing gently used creative supplies to students</li>
-                <li>Collaborated with community organizers to raise awareness of social justice issues like homelessness, food insecurity, and reproductive rights</li>
-            </ul>
+                <ul>
+                    <li>Hosted two art shows selling prints and original artworks to benefit local philanthropies</li>
+                    <li>Started a creative resale supply initiative, providing gently used creative supplies to students</li>
+                    <li>Collaborated with community organizers to raise awareness of social justice issues like homelessness, food insecurity,
+                        and reproductive rights</li>
+                </ul>
+            </p>
+          <!-- </div>
+          <div class="audiophile"> -->
+            <h1 class="project-heading">Audiophile</h1>
+            <video class="d-block w-100" id="audiophile" controls>
+              <source src="audiophile_demo.mov">
+            </video>
+            <p>
+                Audiophile is a web app I made with Flask to demo an idea I had for a platform to explore audio media.
+            </p>
+            <p>
+                Users can find a comprehensive list of shows associated with a single podcast network,
+                a functionality that isn’t offered on leading audio streaming platforms. Data is pulled from the iTunes Search API.
+                Results and pagination are dynamically updated using Ajax while the rest of the page is kept static for optimal
+                viewing. Limitations include the 200 result cap of the API.
+            </p>
+            <p>
+                Eventually, it will include filtering capabilities (filter podcasts by average rating, number of episodes,
+                explicitness, etc.), music data, and a profile feature to save, organize, and review works.
+            </p>
+            <p>
+                This is my final project for the Harvard CS50 course, Harvard’s introductory computer science course offered online.
             </p>
           </div>
     </body>
