--- a/projects.html
+++ b/projects.html
@@ -4,15 +4,14 @@
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-        <link href="styles.css" rel="stylesheet">
-        <title>vandana</title>
+        <link href="/static/styles.css" rel="stylesheet">
+        <title>vandana seshadri | projects</title>
     </head>
     <body>
         <!-- Sidebar -->
         <div class="sidebar">
           <!-- Title -->
-          <h1 class="display-6"><a id="logo" href="/">vandana seshadri | projects</a></h1>
-          <!-- <h1 id="logo" class="display-6">vandana seshadri</h1> -->
+          <h1 class="display-6"><a id="logo" href="/">vandana seshadri</a></h1>
           <!-- Navigation -->
           <ul class="menu">
             <li>
@@ -34,14 +33,14 @@
               <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-interval="false">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="yeah-10.JPEG" class="d-block w-100" alt="...">
+                    <img src="/static/tvac01.JPEG" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="000009790011.JPEG" class="d-block w-100" alt="...">
+                    <img src="/static/tvac02.JPEG" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
                     <video class="d-block w-100" controls>
-                        <source src="TVAC_Video.mp4" type="video/mp4">
+                        <source src="/static/tvac03.mp4" type="video/mp4">
                     </video>
                   </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -70,7 +69,7 @@
           <div class="audiophile"> -->
             <h1 class="project-heading">Audiophile</h1>
             <video class="d-block w-100" id="audiophile" controls>
-              <source src="audiophile_demo.mov">
+              <source src="/static/audiophile_demo.mov">
             </video>
             <p>
                 Audiophile is a web app I made with Flask to demo an idea I had for a platform to explore audio media.
