--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-        <link href="styles.css" rel="stylesheet">
+        <link href="/static/styles.css" rel="stylesheet">
         <title>vandana seshadri</title>
     </head>
     <body>
@@ -28,22 +28,22 @@
         <!-- Grid -->
           <ul class="image-gallery">
             <li>
-              <img src="IMG_6328.JPG">
+              <img src="/static/img01.JPG">
             </li>
             <li>
-              <img src="IMG_2095.JPG">
+              <img src="/static/img02.JPG">
             </li>
             <li>
-              <img src="IMG_1459.jpg">
+              <img src="/static/img03.jpg">
             </li>
             <li>
-              <img src="ig_8.JPG">
+              <img src="/static/img04.JPG">
             </li>
             <li>
-              <img src="IMG_1544.JPG">
+              <img src="/static/img05.JPG">
             </li>
             <li>
-              <img src="teeth_1.png">
+              <img src="/static/img06.png">
             </li>
           </ul>
     </body>
