--- a/projects.html
+++ b/projects.html
@@ -5,13 +5,14 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link href="/static/styles.css" rel="stylesheet">
-        <title>vandana seshadri | projects</title>
+        <title>vandana seshadri</title>
     </head>
     <body>
         <!-- Sidebar -->
         <div class="sidebar">
           <!-- Title -->
           <h1 class="display-6"><a id="logo" href="/">vandana seshadri</a></h1>
+          <!-- <h1 id="logo" class="display-6">vandana seshadri</h1> -->
           <!-- Navigation -->
           <ul class="menu">
             <li>
@@ -28,7 +29,10 @@
         <!-- Carousel -->
         <div class="projects">
           <!-- <h1 id="header">Texas Visual Arts Collective</h1> -->
-          <h1>Texas Visual Arts Collective</h1>
+          <div class="header">
+            <h1>Texas Visual Arts Collective</h1>
+            <p class="project-date">2020-2022</p>
+          </div>
               <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-interval="false">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
@@ -64,9 +68,10 @@
                         and reproductive rights</li>
                 </ul>
             </p>
-          <!-- </div>
-          <div class="audiophile"> -->
-            <h1 class="project-heading">Audiophile</h1>
+            <div class="header">
+              <h1>Audiophile</h1>
+              <p class="project-date">2024</p>
+            </div>
             <video class="d-block w-100" id="audiophile" controls>
               <source src="/static/audiophile_demo.mov">
             </video>
@@ -76,15 +81,14 @@
             <p>
                 Users can find a comprehensive list of shows associated with a single podcast network,
                 a functionality that isn’t offered on leading audio streaming platforms. Data is pulled from the iTunes Search API.
-                Results and pagination are dynamically updated using Ajax while the rest of the page is kept static for optimal
-                viewing. Limitations include the 200 result cap of the API.
+                Results and pagination are dynamically updated using Ajax. Limitations include the 200-result cap of the API.
             </p>
             <p>
                 Eventually, it will include filtering capabilities (filter podcasts by average rating, number of episodes,
                 explicitness, etc.), music data, and a profile feature to save, organize, and review works.
             </p>
             <p>
-                This is my final project for the Harvard CS50 course, Harvard’s introductory computer science course offered online.
+                This is my final project for CS50, Harvard’s introductory computer science course.
             </p>
           </div>
     </body>
