--- a/about.html
+++ b/about.html
@@ -4,18 +4,18 @@
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-        <link href="/static/styles.css" rel="stylesheet">
+        <link href="styles.css" rel="stylesheet">
         <title>vandana seshadri | about</title>
     </head>
     <body>
         <!-- Sidebar -->
         <div class="sidebar">
           <!-- Title -->
-          <h1 class="display-6"><a id="logo" href="/">vandana seshadri</a></h1>
+          <h1 class="display-6">vandana seshadri</h1>
           <!-- Navigation -->
           <ul class="menu">
             <li>
-              <a href="/">Artwork</a>
+              <a href="index.html">Artwork</a>
             </li>
             <li>
               <a href="projects.html">Projects</a>
@@ -28,7 +28,7 @@
           <!-- p: 1 unique tag -->
         <div class="bio">
           <p id="hello" class="abt">hello!</p>
-          <div>
+          <!-- <div>
             <p class="abt">
               My name is Vandana (she/her), and I'm a creative person based in Dallas, TX.
               I have a B.S. in Chemical Engineering from the University of Texas at Austin.
@@ -43,6 +43,17 @@
             <p class="abt">
               I'm currently working at <a href="https://iqvia.com">IQVIA</a> as a data analyst. I'm also an aspiring user researcher/product designer in the tech space.
               Outside of work and art, I like to swim, go on walks, play tennis, and indulge in pop culture.
+            </p> -->
+            <p class="abt">
+              I’m Vandana, a visual artist, data analyst, and aspiring designer based in Dallas, Texas.
+              I specialize in small-scale analog artwork, primarily working in watercolor, graphite, and pen/ink.
+            <p class="abt">
+              Using a design thinking framework, I think about how to create products and experiences to solve problems.
+              I’ve developed creative solutions for university students and gathered user research in my current role as an analyst at
+              IQVIA.
+            </p>
+            <p class="abt">
+              Outside of my career, I like to knit, write, and spend lots of time in the Texas sun.
             </p>
         </div>
         </div>
