--- a/index.html
+++ b/index.html
@@ -28,13 +28,19 @@
         <!-- Grid -->
           <ul class="image-gallery">
             <li>
-              <img src="/static/img0001.JPG">
+                <a href="img0001.html">
+                    <img src="/static/img0001.JPG">
+                </a>
             </li>
             <li>
-              <img src="/static/img02.JPG">
+                <a href="img02.html">
+                    <img src="/static/img02.JPG">
+                </a>
             </li>
             <li>
-              <img src="/static/img03.jpg">
+                <a href="/static/img03.JPG">
+                    <img src="/static/img03.JPG">
+                </a>
             </li>
             <li>
               <img src="/static/img04.JPG">
