--- a/index.html
+++ b/index.html
@@ -38,18 +38,24 @@
                 </a>
             </li>
             <li>
-                <a href="/static/img03.JPG">
-                    <img src="/static/img03.JPG">
+                <a href="img03.html">
+                    <img src="/static/img03.jpg">
                 </a>
             </li>
             <li>
-              <img src="/static/img04.JPG">
+                <a href="img04.html">
+                    <img src="/static/img04.JPG">
+                </a>
             </li>
             <li>
-              <img src="/static/img05.JPG">
+                <a href="img05.html">
+                    <img src="/static/img05.JPG">
+                </a>
             </li>
             <li>
-              <img src="/static/img06.png">
+                <a href="img06.html">
+                    <img src="/static/img06.png">
+                </a>
             </li>
           </ul>
     </body>
