--- a/index.html
+++ b/index.html
@@ -28,32 +28,32 @@
         <!-- Grid -->
           <ul class="image-gallery">
             <li>
-                <a href="img0001.html">
+                <a href="static/enlarged/img0001.html">
                     <img src="/static/img0001.JPG">
                 </a>
             </li>
             <li>
-                <a href="img02.html">
+                <a href="static/enlarged/img02.html">
                     <img src="/static/img02.JPG">
                 </a>
             </li>
             <li>
-                <a href="img03.html">
+                <a href="static/enlarged/img03.html">
                     <img src="/static/img03.jpg">
                 </a>
             </li>
             <li>
-                <a href="img04.html">
+                <a href="static/enlarged/img04.html">
                     <img src="/static/img04.JPG">
                 </a>
             </li>
             <li>
-                <a href="img05.html">
+                <a href="static/enlarged/img05.html">
                     <img src="/static/img05.JPG">
                 </a>
             </li>
             <li>
-                <a href="img06.html">
+                <a href="static/enlarged/img06.html">
                     <img src="/static/img06.png">
                 </a>
             </li>
