--- a/static/enlarged/img03.html
+++ b/static/enlarged/img03.html
@@ -27,7 +27,7 @@
           </ul>
         </div>
         <div id="backlink">
-            <a href="test.html" id="back">&larr; Back</a>
+            <a href="/" id="back">&larr; Back</a>
         </div>
         <div id="enlarge">
             <img src="/static/img03.jpg">
