--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <!-- Sidebar -->
         <div class="sidebar">
           <!-- Title -->
-          <h1 class="display-6">vandana seshadri</h1>
+          <h1 class="display-6"><a id="logo" href="/">vandana seshadri</a></h1>
           <!-- Navigation -->
           <ul class="menu">
             <li>
