--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
                     <img src="/static/img06.png">
                 </a>
             </li>
+            <li>
+                <a href="/static/enlarged/img07.html">
+                    <img src="/static/img07.JPG">
+                </a>
+            </li>
+            <li>
+                <a href="/static/enlarged/img08.html">
+                    <img src="/static/img08.JPG">
+                </a>
+            </li>
           </ul>
     </body>
 </html>
