--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
           <!-- Navigation -->
           <ul class="menu">
             <li>
-              <a href="index.html">Artwork</a>
+              <a href="/">Artwork</a>
             </li>
             <li>
               <a href="projects.html">Projects</a>
