--- a/index.html
+++ b/index.html
@@ -67,6 +67,21 @@
                     <img src="/static/img08.JPG">
                 </a>
             </li>
+            <li>
+                <a href="/static/enlarged/img09.html">
+                    <img src="/static/img09.JPG">
+                </a>
+            </li>
+            <li>
+                <a href="/static/enlarged/img10.html">
+                    <img src="/static/img10.JPG">
+                </a>
+            </li>
+            <li>
+                <a href="/static/enlarged/img11.html">
+                    <img src="/static/img11.JPG">
+                </a>
+            </li>
           </ul>
     </body>
 </html>
