--- a/static/enlarged/img09.html
+++ b/static/enlarged/img09.html
@@ -30,7 +30,7 @@
             <a href="/" id="back">&larr; Back</a>
         </div>
         <div id="enlarge">
-            <img src="/static/img09.JPG">
+            <img src="/static/img09.jpg">
         </div>
     </body>
 </html>
