--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </li>
             <li>
                 <a href="/static/enlarged/img09.html">
-                    <img src="/static/img09.JPG">
+                    <img src="/static/img09.jpg">
                 </a>
             </li>
             <li>
@@ -79,7 +79,7 @@
             </li>
             <li>
                 <a href="/static/enlarged/img11.html">
-                    <img src="/static/img11.JPG">
+                    <img src="/static/img11.jpg">
                 </a>
             </li>
           </ul>
